--- a/.github/workflows/sync-to-huggingface.yml
+++ b/.github/workflows/sync-to-huggingface.yml
@@ -18,7 +18,7 @@ jobs:
         env:
           HF_TOKEN: ${{ secrets.HF_TOKEN }}
         run: |
-          git push https://megaphuongdo:$HF_TOKEN@huggingface.co/spaces/megaphuongdo/b3hauc3-images main --force
+          git push https://megaphuongdo:${HF_TOKEN}@huggingface.co/spaces/megaphuongdo/b3hauc3-images main --force
           # Ví dụ cho Space:
           # git remote add hf https://huggingface.co/spaces/tênuser/tênspace
 
